--- a/26.08.2025.md
+++ b/26.08.2025.md
@@ -132,5 +132,17 @@ aws s3 ls s3://$BUCKET/backups/raw/ --region us-east-1
 ---
 
 ## Fazit
-Am 26.08.2025 wurde erfolgreich ein automatisiertes Backup-System mit AWS S3 implementiert.  
-Die Backups sind versioniert, werden automatisch archiviert und können jederzeit wiederhergestellt werden.  
+Am 26.08.2025 wurde erfolgreich ein automatisiertes Backup-System mit **AWS S3** implementiert.  
+
+Die wichtigsten Ergebnisse:  
+- Die **AWS CLI** wurde erfolgreich eingerichtet und mit temporären Zugangsdaten aus dem Learner Lab konfiguriert.  
+- Ein eigener **S3-Bucket** wurde erstellt, mit **Versionierung** versehen und mit einer **Lifecycle-Policy** ausgestattet. Dadurch werden Backups automatisch nach 30 Tagen nach **Glacier** verschoben und nach 90 Tagen gelöscht.  
+- Auf einer **EC2-Instanz** wurde ein **Backup-Skript** implementiert, das täglich per **Cronjob** ausgeführt wird. Dieses Skript erstellt ein inkrementelles **Tar-Archiv** der relevanten Verzeichnisse und lädt es in den S3-Bucket hoch.  
+- Erste **Test-Uploads** wurden erfolgreich durchgeführt und konnten im Bucket überprüft werden. Damit ist nachweisbar, dass Dateien korrekt gesichert werden.  
+- Durch die gewählten Verfahren (Versionierung, Lifecycle, Automatisierung) sind die Backups **reproduzierbar, platzsparend und revisionssicher**.  
+- Ein **Restore** kann jederzeit durch den Download und das Entpacken der Archive aus S3 erfolgen.  
+
+Damit erfüllt die Lösung die definierten Anforderungen:  
+- **RTO:** maximal 2 Stunden  
+- **RPO:** höchstens 24 Stunden Datenverlust  
+- **Aufbewahrung:** 90 Tage mit automatischer Archivierung in kostengünstigem Speicher
