--- a/26.08.2025.md
+++ b/26.08.2025.md
@@ -143,6 +143,6 @@ Die wichtigsten Ergebnisse:
 - Ein **Restore** kann jederzeit durch den Download und das Entpacken der Archive aus S3 erfolgen.  
 
 Damit erfüllt die Lösung die definierten Anforderungen:  
-- **RTO:** maximal 2 Stunden  
-- **RPO:** höchstens 24 Stunden Datenverlust  
-- **Aufbewahrung:** 90 Tage mit automatischer Archivierung in kostengünstigem Speicher
+- **RTO:** maximal 2 Stunden (Neustart oder Restore aus S3 möglich)
+- **RPO:** höchstens 24 Stunden Datenverlust (tägliche Dumps in S3)  
+- **Aufbewahrung:** 90 Tage mit automatischer Archivierung nach 30 Tagen in Glacier
