--- a/docs/tagesdoku/28.10.2025.md
+++ b/docs/tagesdoku/28.10.2025.md
@@ -1,7 +1,5 @@
 # 🗓 Tagesdokumentation – 28.10.2025  
-**Projekt:** M143 – Backup- und Restore-System  
-**Autor:** Noah Bachmann  
-**System:** AWS EC2 (Amazon Linux), RDS (MySQL), S3, SNS, Gmail  
+**Datum:** 28.10.2025
 
 ---
 
